<?xml version="1.0" encoding="utf-8"?> <!-- Options menu for the MainActivity -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CatalogActivity">

    <item
        android:id="@+id/action_change_positions"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/action_change_positions"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_change_dates"
        android:icon="@drawable/ic_date_range_white_24dp"
        android:title="@string/action_change_dates"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_change_location"
        android:icon="@drawable/ic_location_city_white_24dp"
        android:title="@string/action_change_location"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_update_local_DB"
        android:title="@string/action_update_db"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never" />
</menu>